fix misalign in list view

--- a/src/renderer/assets/styles/myBooks.css
+++ b/src/renderer/assets/styles/myBooks.css
@@ -240,6 +240,16 @@ main {
 	}
 }
 
+.publicationLine {
+	display: flex;
+	align-items: center;
+	& p {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+}
+
 /* ENTRY FORM */
 
 .tag_add_button {
